# rateb-erp/modules/pos/app/Application/V2/PosV2RequestCompositionRoot.php
@@ -13,6 +13,7 @@ use Rateb\App\Pos\Repositories\V2\Adapters\V1CatalogProductAdapter;
 use Rateb\App\Pos\Repositories\V2\Adapters\V1CartAdapter;
 use Rateb\App\Pos\Repositories\V2\Adapters\V1CustomerAdapter;
 use Rateb\App\Pos\Repositories\V2\Adapters\V1DiscountAdapter;
+use Rateb\App\Pos\Repositories\V2\Adapters\V1PaymentAdapter;
 use Rateb\App\Pos\Repositories\V2\Adapters\V1PosContextAdapter;
 use Rateb\App\Pos\Repositories\V2\Contracts\PosV2CashierPortInterface;
 use Rateb\App\Pos\Repositories\V2\Contracts\PosV2PosContextPortInterface;
@@ -78,6 +79,7 @@ final class PosV2RequestCompositionRoot
         $cart = new V1CartAdapter();
         $customers = new V1CustomerAdapter();
         $discounts = new V1DiscountAdapter(cartPort: $cart);
+        $payments = new V1PaymentAdapter(cartPort: $cart);
 
         $featureFlagService = new PosV2FeatureFlagService(
             $featureFlagRepository,
@@ -99,6 +101,7 @@ final class PosV2RequestCompositionRoot
                 $cart,
                 $customers,
                 $discounts,
+                $payments,
             ),
             new PosV2SharedServices($featureFlagService),
             $posContext,
