# rateb-erp/modules/pos/routes/pos-v2.php
@@ -7,6 +7,7 @@ use Rateb\App\Pos\Controllers\V2\PosV2CartApiController;
 use Rateb\App\Pos\Controllers\V2\PosV2CatalogApiController;
 use Rateb\App\Pos\Controllers\V2\PosV2CustomerApiController;
 use Rateb\App\Pos\Controllers\V2\PosV2DiscountApiController;
+use Rateb\App\Pos\Controllers\V2\PosV2PaymentApiController;
 use Rateb\App\Pos\Controllers\V2\PosV2RegisterApiController;
 use Rateb\App\Pos\Controllers\V2\PosV2RegisterController;
 use Rateb\App\Pos\Middleware\V2\PosV2FeatureGateMiddleware;
@@ -66,3 +67,6 @@ $router->post($posApp('api/v2/cart/discounts/line'), [PosV2DiscountApiController
 $router->delete($posApp('api/v2/cart/discounts/line/{lineId}'), [PosV2DiscountApiController::class, 'removeLineDiscount'], $posV2Mw);
 $router->post($posApp('api/v2/cart/discounts/cart'), [PosV2DiscountApiController::class, 'applyCartDiscount'], $posV2Mw);
 $router->delete($posApp('api/v2/cart/discounts/cart'), [PosV2DiscountApiController::class, 'removeCartDiscount'], $posV2Mw);
+$router->get($posApp('api/v2/payments'), [PosV2PaymentApiController::class, 'index'], $posV2Mw);
+$router->post($posApp('api/v2/payments/cash'), [PosV2PaymentApiController::class, 'addCash'], $posV2Mw);
+$router->delete($posApp('api/v2/payments/{paymentId}'), [PosV2PaymentApiController::class, 'remove'], $posV2Mw);
